# SnippetAI

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  project-idea.md  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
