[package]
name = "snippet-ai"
version = "0.1.0"
description = "A portable snippet management application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58", features = ["Win32_System_DataExchange", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Memory"] }
base64 = "0.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
